turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:30: error: not found: value i
  com(rule(i))
           ^